# mcp_server_demo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 01-mcp-primer.md  02-python-concepts.md  03-code-walkthrough.md  README.md
scripts/: probe_bccr.py
src/bccr_mcp_server/: __init__.py  __main__.py  cache.py  config.py  errors.py  server.py
src/bccr_mcp_server/bccr/: __init__.py  client.py  models.py
src/bccr_mcp_server/tools/: __init__.py  exchange_rate.py  narrative.py  summarize.py
tests/: conftest.py  test_bccr_client.py  test_cache.py  test_config.py  test_narrative.py  test_summarize.py  test_tools.py
